# trio-engineio

./: .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  Changelog  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: Pipeline.yml  test.yml
.run/commands/: isort.sh  pytest.sh  tagrelease.sh
.run/tasks/: checks.sh  pylint.sh
Examples/: test_trio_client.py
changelog/: index.html
credits/: index.html
css/: extra.css
docs/: changelog.md  credits.md  explanation.md  how-to-guides.md  index.md  license.md  reference.md  requirements.txt  tutorials.md
docs/css/: extra.css
explanation/: index.html
how-to-guides/: index.html
license/: index.html
reference/: index.html
search/: search_index.json
src/: test_trio_client.py
src/trio_engineio/: __init__.py  _ssl.py  eio_types.py  exceptions.py  packet.py  payload.py  trio_client.py  trio_util.py
tasks/: __init__.py  build.py  checks.py  commands.py  format.py  install.py  publish.py  release.py  test.py
tests/: __init__.py  conftest.py  test_eio_types.py  test_packet.py  test_payload.py  test_trio_eio_client.py  test_trio_util.py
tutorials/: index.html
