[tool.poetry]
name = "trio-engineio"
version = "0.1.2"
description = ""
authors = ["Eric Lemoine <erik.lemoine@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Elmeric/trio-engineio"
repository = "https://github.com/Elmeric/trio-engineio"
packages = [{include = "trio_engineio", from = "src"}]

name = "apologies"
version = "0.1.39"
description = "Python code to play a game similar to Sorry"
authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
license = "Apache-2.0"
readme = "PyPI.md"
homepage = "https://pypi.org/project/apologies/"
repository = "https://github.com/pronovic/apologies"
include = [
   { path = 'Changelog', format = 'sdist' },
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'docs', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [ { include = "apologies", from = "src" } ]
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Games/Entertainment :: Board Games",
   "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.22.0"
httpcore = "^0.15.0"
trio-websocket = "^0.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-trio = "^0.7.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov=trio_engineio"
]
trio_mode = true
testpaths = [
    "tests",
]
#mock_use_standalone_module = true
