[tool.poetry]
name = "trio-engineio"
version = "0.1.3"
description = "An asynchronous Engine.IO client using the trio framework"
authors = ["Eric Lemoine <erik.lemoine@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Elmeric/trio-engineio"
repository = "https://github.com/Elmeric/trio-engineio"
packages = [{include = "trio_engineio", from = "src"}]

classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: BSD-3-Clause License",
   "Operating System :: OS Independent",
   "Environment :: Web Environment",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.22.0"
httpcore = "^0.15.0"
trio-websocket = "^0.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-trio = "^0.7.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov=trio_engineio"
]
trio_mode = true
testpaths = [
    "tests",
]
#mock_use_standalone_module = true
